almost fixed the wordwrap problem

--- a/tutor/static/css/django_private_chat.css
+++ b/tutor/static/css/django_private_chat.css
@@ -32,17 +32,19 @@
 
 .msg .pull-left {
     color: black;
+    width: 70%;
     word-wrap: break-word;
 }
 
 .msg .pull-right {
     color: black;
+    width: 70%;
+    text-align: right;
     word-wrap: break-word;
 }
 
 .msg {
     font-size: 17px;
-    width: 100%;
     font-family: arial, Helvetica, Verdana, sans-serif;
 }
 
